# AI_SP500

./: README.md  SP500_WebScraping.py  pyproject.toml  requirements.txt
Data_Sources/: SP500_API_Request.py
